--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+adrf==0.1.9
 amqp==5.3.1
+anyio==4.9.0
 asgiref==3.8.1
+async-property==0.2.2
+asyncio==3.4.3
 billiard==4.2.1
 celery==5.4.0
 certifi==2025.1.31
 cffi==1.17.1
+channels==4.2.2
 charset-normalizer==3.4.1
 click==8.1.8
 click-didyoumean==0.3.1
@@ -19,6 +24,9 @@ django-sslserver==0.22
 django-werkzeug-debugger-runserver==0.3.1
 djangorestframework==3.15.2
 gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 kombu==5.5.1
 MarkupSafe==3.0.2
@@ -31,10 +39,12 @@ redis==5.2.1
 requests==2.32.3
 setuptools==75.8.0
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
+uvicorn==0.34.0
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
